updated recipe2,  recipe3 and css files

--- a/recipes/recipe2.html
+++ b/recipes/recipe2.html
@@ -129,45 +129,27 @@
             <li class="lead">1 cup uncooked orzo pasta</li>
             <li class="lead">1/3 cup finely chopped carrot</li>
         </ul> -->
-
-<pre>
-    
-1 tablespoon olive oil
-
-1 medium onion, chopped
-
-3 cloves garlic, minced
-
-1 (28 ounce) can crushed tomatoes
-
-1 (10.5 ounce) can condensed chicken broth
-
-1 ¼ cups water
-
-2 teaspoons chili powder
-
-1 teaspoon dried oregano
-
-1 (15 ounce) can black beans, rinsed and drained
-
-2 large boneless chicken breast halves, cooked and cut into bite-sized pieces
-
-1 cup whole corn kernels, cooked
-
-1 cup white hominy
-
-1 (4 ounce) can chopped green chile peppers
-
-¼ cup chopped fresh cilantro
-
-½ cup crushed tortilla chips, or to taste
-
-2 medium avocados, sliced, or to taste
-
-½ cup shredded Monterey Jack cheese, or to taste
-
-2 tablespoons chopped green onions, or to taste
-</pre>
+        
+        <ul class="items-list">    
+            <li class="lead">1 tablespoon olive oil</li>
+            <li class="lead">1 medium onion, chopped</li>
+            <li class="lead">3 cloves garlic, minced</li>
+            <li class="lead">1 (28 ounce) can crushed tomatoes</li>
+            <li class="lead">1 (10.5 ounce) can condensed chicken broth</li>
+            <li class="lead">1 ¼ cups water</li>
+            <li class="lead">2 teaspoons chili powder</li>
+            <li class="lead">1 teaspoon dried oregano</li>
+            <li class="lead">1 (15 ounce) can black beans, rinsed and drained</li>
+            <li class="lead">2 large boneless chicken breast halves, cooked and cut into bite-sized pieces</li>
+            <li class="lead">1 cup whole corn kernels, cooked</li>
+            <li class="lead">1 cup white hominy</li>
+            <li class="lead">1 (4 ounce) can chopped green chile peppers</li>
+            <li class="lead">¼ cup chopped fresh cilantro</li>
+            <li class="lead">½ cup crushed tortilla chips, or to taste</li>
+            <li class="lead">2 medium avocados, sliced, or to taste</li>
+            <li class="lead">½ cup shredded Monterey Jack cheese, or to taste</li>
+            <li class="lead">2 tablespoons chopped green onions, or to taste</li>
+        </ul>
 
     </section>
 
