--- a/recipes/recipe3.html
+++ b/recipes/recipe3.html
@@ -134,32 +134,20 @@
             <li class="lead">1/3 cup finely chopped carrot</li>
         </ul> -->
 
-<pre>
-
-1 tablespoon butter
-
-½ cup diced carrot
-
-½ cup diced onion
-
-½ cup diced celery
-
-¼ teaspoon fresh thyme leaves
-
-1 pinch salt
-
-2 tablespoons melted chicken fat
-
-2 quarts roasted chicken broth (see footnote for recipe link)
-
-4 ounces uncooked wide egg noodles
-
-2 cooked boneless chicken breast halves, cubed
-
-1 pinch cayenne pepper (Optional)
-
-salt and ground black pepper to taste
-</pre>
+        <ul class="items-list">
+            <li class="lead">1 tablespoon butter</li>
+            <li class="lead">½ cup diced carrot</li>
+            <li class="lead">½ cup diced onion</li>
+            <li class="lead">½ cup diced onion</li>
+            <li class="lead">¼ teaspoon fresh thyme leaves</li>
+            <li class="lead">1 pinch salt</li>
+            <li class="lead">2 tablespoons melted chicken fat</li>
+            <li class="lead">2 quarts roasted chicken broth (see footnote for recipe link)</li>
+            <li class="lead">4 ounces uncooked wide egg noodles</li>
+            <li class="lead">2 cooked boneless chicken breast halves, cubed</li>
+            <li class="lead">1 pinch cayenne pepper (Optional)</li>
+            <li class="lead">salt and ground black pepper to taste</li>
+        </ul>
 
     </section>
 
