updated all files

--- a/recipes/recipe3.html
+++ b/recipes/recipe3.html
@@ -151,7 +151,7 @@
 
     </section>
 
-    <div class="container">
+    <div class="steps-container container">
         <h1>Directions</h1>
 
         <div class="step-container">
