--- a/recipes/recipe2.html
+++ b/recipes/recipe2.html
@@ -153,7 +153,7 @@
 
     </section>
 
-    <div class="container">
+    <div class="steps-container container">
         <h1>Directions</h1>
 
         <div class="step-container">
