1-12-2024 updated all files

--- a/recipes/recipe2.html
+++ b/recipes/recipe2.html
@@ -266,6 +266,18 @@
     </footer>
 
 
+    <div id="modal-box" class="modal-box flex-center">
+        <div class="flex-center box">
+            <div class="header flex-center">
+                <h3>Dish Name</h3>
+                <span id="close-btn">X</span>
+            </div>
+            <div class="body">
+                <img src="" id="modal-box-img" alt="recipe-image1">
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="../app.js"></script>
