--- a/recipes/recipe1.html
+++ b/recipes/recipe1.html
@@ -31,6 +31,13 @@
                     <li class="imgs"><img src="../img/img3.jpeg" alt="image3"></li>
                     <li class="imgs"><img src="../img/img4.jpeg" alt="image4"></li>
                 </ul>
+
+                <!-- <ul class="imgs-list">
+                    <li class="imgs"><a href="../img/img1.jpeg"><img src="../img/img1.jpeg" alt="image1"></a></li>
+                    <li class="imgs"><a href="../img/img2.jpeg"><img src="../img/img2.jpeg" alt="image2"></a></li>
+                    <li class="imgs"><a href="../img/img3.jpeg"><img src="../img/img3.jpeg" alt="image3"></a></li>
+                    <li class="imgs"><a href="../img/img4.jpeg"><img src="../img/img4.jpeg" alt="image4"></a></li>
+                </ul> -->
             </div>
 
             <ul class="details">
@@ -241,6 +248,20 @@
             <span>&copy;BlackShadow <span>2024</span></span>
         </div>
     </footer>
+
+     
+
+    <div id="modal-box" class="modal-box flex-center">
+        <div class="flex-center box">
+            <div class="header flex-center">
+                <h3>Dish Name</h3>
+                <span id="close-btn">X</span>
+            </div>
+            <div class="body">
+                <img src="" id="modal-box-img" alt="recipe-image1">
+            </div>
+        </div>
+    </div>
 
 
     <script src="../app.js"></script>
