--- a/recipes/recipe3.html
+++ b/recipes/recipe3.html
@@ -32,6 +32,13 @@
                     <li class="imgs"><img src="../img/recipe3img3.jpeg" alt="image3"></li>
                     <li class="imgs"><img src="../img/recipe3img4.jpeg" alt="image4"></li>
                 </ul>
+
+                <!-- <ul class="imgs-list">
+                    <li class="imgs"><a href="../img/recipe3img1.jpeg"><img src="../img/recipe3img1.jpeg" alt="image1"></a></li>
+                    <li class="imgs"><a href="../img/recipe3img2.jpeg"><img src="../img/recipe3img2.jpeg" alt="image2"></a></li>
+                    <li class="imgs"><a href="../img/recipe3img3.jpeg"><img src="../img/recipe3img3.jpeg" alt="image3"></a></li>
+                    <li class="imgs"><a href="../img/recipe3img4.jpeg"><img src="../img/recipe3img1.jpeg" alt="image4"></a></li>
+                </ul> -->
             </div>
 
             <ul class="details">
@@ -263,6 +270,17 @@
         </div>
     </footer>
 
+    <div id="modal-box" class="modal-box flex-center">
+        <div class="flex-center box">
+            <div class="header flex-center">
+                <h3>Dish Name</h3>
+                <span id="close-btn">X</span>
+            </div>
+            <div class="body">
+                <img src="" id="modal-box-img" alt="recipe-image1">
+            </div>
+        </div>
+    </div>
 
 
 
