1-12-2024 4:28PM updated all files

--- a/recipes/recipe3.html
+++ b/recipes/recipe3.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="container flex-center">
-        <h1 class="title">Homemade Chicken Noodle Soup</h1>
+        <h1 class="title main-title">Homemade Chicken Noodle Soup</h1>
         <p class="lead"> This homemade chicken noodle soup is soul-warming and deliciously simple — just chicken and noodles. What makes it so good is the homemade roasted chicken stock.</p>
         
         <p class="chef-name"> Recipe by John Mitzewich<span>Updated on March 2, 2023</span></p>
