--- a/recipes/recipe1.html
+++ b/recipes/recipe1.html
@@ -15,7 +15,7 @@
 
     
     <div class="container flex-center">
-        <h1 class="title">Super-Delicious Zuppa Toscana</h1>
+        <h1 class="title main-title">Super-Delicious Zuppa Toscana</h1>
         <p class="lead">Zuppa Toscana is oh-so-good! This recipe has just the right amount of spiceto keep you coming back for more!</p>
         <p class="chef-name">Recipe by souporsweets <span>updated on April 24-2023</span></p>
         
