--- a/recipes/recipe2.html
+++ b/recipes/recipe2.html
@@ -15,7 +15,7 @@
 
     
     <div class="container flex-center">
-        <h1 class="title">Tortilla Soup</h1>
+        <h1 class="title main-title">Tortilla Soup</h1>
         <p class="lead">My chicken tortilla soup is not a fast recipe, but it is one of the greatest chicken soup experiences known to man. The smoky, spicy, slowly simmered tomato chicken broth is made from scratch, and the soup is topped with all your favorite garnishes: toasted tortilla strips, sour cream, avocado, cilantro, lime, and crumbled Mexican cheese.</p>
 
         <p class="chef-name">By John Mitzewich  <span>Updated on November 9, 2023
