updated 5:28PM recipe files

--- a/recipes/recipe1.html
+++ b/recipes/recipe1.html
@@ -185,7 +185,7 @@
                 </li>
                 <li>
                     <h4><span>27</span>g</h4>
-                    <span>Proten</span>
+                    <span>Protein</span>
                 </li>
             </ul>
         </div>
