--- a/recipes/recipe2.html
+++ b/recipes/recipe2.html
@@ -38,19 +38,19 @@
             <ul class="details">
                 <li>
                     <h4>Prep Time:</h4>
-                    <span>30 mins</span>
+                    <span>15 mins</span>
                 </li>
                 <li>
                     <h4>Cook Time:</h4>
-                    <span>50 mins</span>
+                    <span>25 mins</span>
                 </li>
                 <li>
                     <h4>total Time:</h4>
-                    <span>1 hr 20 mins</span>
+                    <span>40 mins</span>
                 </li>
                 <li>
                     <h4>Servings:</h4>
-                    <span>10</span>
+                    <span>8</span>
                 </li>
             </ul>
         </div>
@@ -188,20 +188,20 @@
             <span class="title">Nutrition Facts</span><span> (per serving)</span>
             <ul class="details">
                 <li>
-                    <h4>416</h4>
+                    <h4>352</h4>
                     <span>Calories</span>
                 </li>
                 <li>
-                    <h4><span>14</span>g</h4>
+                    <h4><span>18</span>g</h4>
                     <span>Fat</span>
                 </li>
                 <li>
-                    <h4><span>43</span>g</h4>
+                    <h4><span>34</span>g</h4>
                     <span>Carbs</span>
                 </li>
                 <li>
-                    <h4><span>27</span>g</h4>
-                    <span>Proten</span>
+                    <h4><span>19</span>g</h4>
+                    <span>Protein</span>
                 </li>
             </ul>
         </div>
