--- a/recipes/recipe3.html
+++ b/recipes/recipe3.html
@@ -48,11 +48,11 @@
                 </li>
                 <li>
                     <h4>Cook Time:</h4>
-                    <span>50 mins</span>
+                    <span>20 mins</span>
                 </li>
                 <li>
                     <h4>total Time:</h4>
-                    <span>1 hr 20 mins</span>
+                    <span>40 mins</span>
                 </li>
                 <li>
                     <h4>Servings:</h4>
@@ -193,20 +193,20 @@
             <span class="title">Nutrition Facts</span><span> (per serving)</span>
             <ul class="details">
                 <li>
-                    <h4>416</h4>
+                    <h4>149</h4>
                     <span>Calories</span>
                 </li>
                 <li>
-                    <h4><span>14</span>g</h4>
+                    <h4><span>7</span>g</h4>
                     <span>Fat</span>
                 </li>
                 <li>
-                    <h4><span>43</span>g</h4>
+                    <h4><span>12</span>g</h4>
                     <span>Carbs</span>
                 </li>
                 <li>
-                    <h4><span>27</span>g</h4>
-                    <span>Proten</span>
+                    <h4><span>10</span>g</h4>
+                    <span>Protein</span>
                 </li>
             </ul>
         </div>
